[gd_scene load_steps=9 format=3 uid="uid://cmlu6ehuwhuq6"]

[ext_resource type="Script" path="res://scenes/overworld/overworld.gd" id="1_jmjyb"]
[ext_resource type="PackedScene" uid="uid://pu46mkcjdswb" path="res://scenes/esc_menu/esc_menu.tscn" id="3_3h7bd"]
[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="3_5sf0l"]
[ext_resource type="Script" path="res://scenes/overworld/map_view/map_view.gd" id="4_f2e7b"]
[ext_resource type="PackedScene" uid="uid://drjdjumbfief5" path="res://cards/deck/deck_view.tscn" id="5_j7lb7"]
[ext_resource type="Texture2D" uid="uid://b1tiaenfjsnp" path="res://assets/icons/coin.png" id="5_jptac"]
[ext_resource type="Script" path="res://scenes/overworld/map_view/lines.gd" id="5_ocmwk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nfs5d"]
bg_color = Color(0.788235, 0.705882, 0.592157, 1)

[node name="Overworld" type="CanvasLayer"]
script = ExtResource("1_jmjyb")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_5sf0l")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="EventContainer" type="PanelContainer" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MapView" type="ScrollContainer" parent="Control/VBoxContainer/EventContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_f2e7b")

[node name="LinesPanel" type="Panel" parent="Control/VBoxContainer/EventContainer/MapView"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 1200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nfs5d")
script = ExtResource("5_ocmwk")

[node name="FloorLabel" type="Label" parent="Control/VBoxContainer/EventContainer/MapView/LinesPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -42.0
offset_bottom = 16.0
grow_horizontal = 0
text = "Floor 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bar" type="PanelContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/Bar"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/Bar/MarginContainer"]
layout_mode = 2

[node name="DeckViewBtn" type="Button" parent="Control/VBoxContainer/Bar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "View Deck"

[node name="Drachme" type="HBoxContainer" parent="Control/VBoxContainer/Bar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="DrachmeIcon" type="TextureRect" parent="Control/VBoxContainer/Bar/MarginContainer/HBoxContainer/Drachme"]
layout_mode = 2
tooltip_text = "Drachme"
texture = ExtResource("5_jptac")
expand_mode = 3
stretch_mode = 5

[node name="DrachmeLabel" type="Label" parent="Control/VBoxContainer/Bar/MarginContainer/HBoxContainer/Drachme"]
unique_name_in_owner = true
layout_mode = 2
text = "15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EscMenu" parent="." instance=ExtResource("3_3h7bd")]

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
anchor_mode = 0
limit_left = -1000
limit_top = -1000
limit_right = 1000
limit_bottom = 1000
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.9
drag_top_margin = 0.9
drag_right_margin = 0.9
drag_bottom_margin = 0.9
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="DeckView" parent="." instance=ExtResource("5_j7lb7")]
unique_name_in_owner = true

[connection signal="pressed" from="Control/VBoxContainer/Bar/MarginContainer/HBoxContainer/DeckViewBtn" to="." method="_on_deck_view_btn_pressed"]
